[gd_scene load_steps=39 format=2]

[ext_resource path="res://Utilities/Menu.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Pictures/MENU/menubg.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Pictures/MENU/menubot.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Pictures/MENU/menutop.png" type="Texture" id=4]
[ext_resource path="res://Fonts/pkmnem.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Graphics/Pictures/MENU/icon_party.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Pictures/MENU/icon_bag.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Pictures/MENU/icon_pokepod.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Pictures/MENU/icon_card.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Pictures/MENU/icon_save.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Pictures/MENU/icon_option.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Pictures/MENU/icon_exit.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Pictures/MENU/icon_pokedex.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Pictures/MENU/icon_run.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Windowskins/skin1.png" type="Texture" id=15]
[ext_resource path="res://Graphics/Pictures/selarrow.png" type="Texture" id=16]
[ext_resource path="res://Utilities/UI/Bounce.tres" type="Animation" id=17]
[ext_resource path="res://Audio/SE/SE_Select1.wav" type="AudioStream" id=18]
[ext_resource path="res://Audio/SE/SE_Zoom2.wav" type="AudioStream" id=19]
[ext_resource path="res://Utilities/Battle/MoveTextFont.tres" type="DynamicFont" id=20]
[ext_resource path="res://Audio/SE/save.wav" type="AudioStream" id=21]
[ext_resource path="res://Utilities/Bag.tscn" type="PackedScene" id=22]
[ext_resource path="res://Utilities/Transition.tscn" type="PackedScene" id=34]
[ext_resource path="res://Graphics/Pictures/trcard.PNG" type="Texture" id=36]
[ext_resource path="res://Graphics/Pictures/trcardbg.png" type="Texture" id=37]
[ext_resource path="res://Graphics/Pictures/trcaseicon.png" type="Texture" id=38]
[ext_resource path="res://Graphics/Pictures/Options/optionbg.png" type="Texture" id=39]
[ext_resource path="res://Graphics/Pictures/Options/fakebox.png" type="Texture" id=40]
[ext_resource path="res://Graphics/Pictures/Options/bars.png" type="Texture" id=41]
[ext_resource path="res://Graphics/Pictures/Options/optionbg2.png" type="Texture" id=42]

[sub_resource type="DynamicFont" id=3]
size = 25
extra_spacing_top = 5
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 27
extra_spacing_top = 8
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 26
extra_spacing_top = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 26
extra_spacing_top = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 26
extra_spacing_top = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 32
extra_spacing_top = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 32
extra_spacing_top = 2
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=9]
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bottom:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 137 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Top:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -97.231 ), Vector2( 0, -2.72076 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Run:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 146.061, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Options:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -97.3742 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Place_Text:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Option_Text:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sounds/OpenMenu:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 2 )
centered = false

[node name="Bottom" type="Sprite" parent="."]
position = Vector2( 0, 137 )
texture = ExtResource( 3 )
centered = false

[node name="Top" type="Sprite" parent="."]
position = Vector2( 0, -97.231 )
texture = ExtResource( 4 )
centered = false

[node name="Place_Text" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 128.0
margin_top = 256.0
margin_right = 384.0
margin_bottom = 288.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Sample Text[/center]"
text = "Sample Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option_Text" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 186.0
margin_right = 326.0
margin_bottom = 32.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]POKÉMON[/center]"
text = "POKÉMON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Node2D" parent="."]
position = Vector2( 0, -97.3742 )

[node name="PARTY" type="Position2D" parent="Options"]
position = Vector2( 256, 62.2673 )
__meta__ = {
"_edit_group_": true
}

[node name="Pokémon" type="Sprite" parent="Options/PARTY"]
position = Vector2( -2, 0.526661 )
texture = ExtResource( 6 )
vframes = 2
frame = 1

[node name="Tween" type="Tween" parent="Options/PARTY"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Options/PARTY"]
anims/Bounce = ExtResource( 17 )

[node name="BAG" type="Position2D" parent="Options"]
position = Vector2( 328, 61 )
__meta__ = {
"_edit_group_": true
}

[node name="Bag" type="Sprite" parent="Options/BAG"]
texture = ExtResource( 7 )
vframes = 2

[node name="Tween" type="Tween" parent="Options/BAG"]

[node name="POKEPOD" type="Position2D" parent="Options"]
position = Vector2( 406, 61 )
__meta__ = {
"_edit_group_": true
}

[node name="Poképod" type="Sprite" parent="Options/POKEPOD"]
texture = ExtResource( 8 )
vframes = 2

[node name="Tween" type="Tween" parent="Options/POKEPOD"]

[node name="CARD" type="Position2D" parent="Options"]
position = Vector2( 479, 64 )
__meta__ = {
"_edit_group_": true
}

[node name="Card" type="Sprite" parent="Options/CARD"]
position = Vector2( 0, -4 )
texture = ExtResource( 9 )
vframes = 2

[node name="Tween" type="Tween" parent="Options/CARD"]

[node name="SAVE" type="Position2D" parent="Options"]
position = Vector2( 556, 64 )
__meta__ = {
"_edit_group_": true
}

[node name="Save" type="Sprite" parent="Options/SAVE"]
position = Vector2( -3, -3 )
texture = ExtResource( 10 )
vframes = 2

[node name="Tween" type="Tween" parent="Options/SAVE"]

[node name="OPTION" type="Position2D" parent="Options"]
position = Vector2( 32, 64 )
__meta__ = {
"_edit_group_": true
}

[node name="Options" type="Sprite" parent="Options/OPTION"]
position = Vector2( 0, -5 )
texture = ExtResource( 11 )
vframes = 2

[node name="Tween" type="Tween" parent="Options/OPTION"]

[node name="EXIT" type="Position2D" parent="Options"]
position = Vector2( 112, 64 )
__meta__ = {
"_edit_group_": true
}

[node name="Exit" type="Sprite" parent="Options/EXIT"]
position = Vector2( 0, -4 )
texture = ExtResource( 12 )
vframes = 2

[node name="Tween" type="Tween" parent="Options/EXIT"]

[node name="POKEDEX" type="Position2D" parent="Options"]
position = Vector2( 184, 64 )
__meta__ = {
"_edit_group_": true
}

[node name="Pokedex" type="Sprite" parent="Options/POKEDEX"]
position = Vector2( 0, -1 )
texture = ExtResource( 13 )
vframes = 2

[node name="Tween" type="Tween" parent="Options/POKEDEX"]

[node name="Run" type="Position2D" parent="."]
position = Vector2( 146.061, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Run"]
position = Vector2( 367, 108 )
texture = ExtResource( 14 )
centered = false
vframes = 2

[node name="Save_Menu" type="Node2D" parent="."]
visible = false

[node name="Info" type="NinePatchRect" parent="Save_Menu"]
margin_right = 228.0
margin_bottom = 152.0
texture = ExtResource( 15 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Name" type="Node2D" parent="Save_Menu/Info"]

[node name="Player" type="RichTextLabel" parent="Save_Menu/Info/Player_Name"]
margin_left = 12.0
margin_top = 40.0
margin_right = 76.0
margin_bottom = 72.0
custom_fonts/normal_font = ExtResource( 20 )
bbcode_enabled = true
bbcode_text = "Player"
text = "Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="Save_Menu/Info/Player_Name"]
margin_left = 77.0
margin_top = 40.0
margin_right = 217.0
margin_bottom = 72.0
custom_fonts/normal_font = ExtResource( 20 )
bbcode_enabled = true
bbcode_text = "Player"
text = "Player"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Node2D" parent="Save_Menu/Info"]

[node name="Time" type="RichTextLabel" parent="Save_Menu/Info/Time"]
margin_left = 11.0
margin_top = 72.0
margin_right = 75.0
margin_bottom = 104.0
custom_fonts/normal_font = ExtResource( 20 )
bbcode_enabled = true
bbcode_text = "Time"
text = "Time"

[node name="Count" type="RichTextLabel" parent="Save_Menu/Info/Time"]
margin_left = 98.0
margin_top = 72.0
margin_right = 207.0
margin_bottom = 104.0
custom_fonts/normal_font = ExtResource( 20 )
bbcode_enabled = true
bbcode_text = "Time"
text = "Time"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Badges" type="Node2D" parent="Save_Menu/Info"]

[node name="Text" type="RichTextLabel" parent="Save_Menu/Info/Badges"]
margin_left = 11.0
margin_top = 104.0
margin_right = 107.0
margin_bottom = 137.0
custom_fonts/normal_font = ExtResource( 20 )
bbcode_enabled = true
bbcode_text = "Badges"
text = "Badges"

[node name="Count" type="RichTextLabel" parent="Save_Menu/Info/Badges"]
margin_left = 98.0
margin_top = 104.0
margin_right = 208.0
margin_bottom = 137.0
custom_fonts/normal_font = ExtResource( 20 )
bbcode_enabled = true
bbcode_text = "0"
text = "0"
scroll_active = false

[node name="Node2D" type="Node2D" parent="Save_Menu/Info"]

[node name="Location" type="RichTextLabel" parent="Save_Menu/Info/Node2D"]
margin_left = 6.0
margin_top = 8.0
margin_right = 222.0
margin_bottom = 38.0
custom_fonts/normal_font = ExtResource( 20 )
bbcode_enabled = true
bbcode_text = "[center]location[/center]"
text = "location"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes_no" type="Node2D" parent="."]
visible = false

[node name="Box" type="NinePatchRect" parent="Yes_no"]
margin_left = 416.0
margin_top = 192.0
margin_right = 512.0
margin_bottom = 288.0
texture = ExtResource( 15 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Yes" type="RichTextLabel" parent="Yes_no/Box"]
margin_left = 40.0
margin_top = 23.0
margin_right = 84.0
margin_bottom = 44.0
custom_fonts/normal_font = ExtResource( 20 )
bbcode_enabled = true
bbcode_text = "Yes"
text = "Yes"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="RichTextLabel" parent="Yes_no/Box"]
margin_left = 40.0
margin_top = 55.0
margin_right = 84.0
margin_bottom = 76.0
custom_fonts/normal_font = ExtResource( 20 )
bbcode_enabled = true
bbcode_text = "No"
text = "No"
scroll_active = false

[node name="Cursor" type="Sprite" parent="Yes_no/Box"]
position = Vector2( 23, 32 )
texture = ExtResource( 16 )

[node name="Bag" parent="." instance=ExtResource( 22 )]
visible = false

[node name="Card" type="Node2D" parent="."]
visible = false

[node name="trcardbg" type="Sprite" parent="Card"]
texture = ExtResource( 37 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 512, 384 )

[node name="trcard" type="Sprite" parent="Card"]
texture = ExtResource( 36 )
centered = false

[node name="hidden_leaders" type="Node2D" parent="Card"]

[node name="1" type="Sprite" parent="Card/hidden_leaders"]
position = Vector2( 107, 278.288 )
texture = ExtResource( 38 )

[node name="2" type="Sprite" parent="Card/hidden_leaders"]
position = Vector2( 203, 278.288 )
texture = ExtResource( 38 )

[node name="3" type="Sprite" parent="Card/hidden_leaders"]
position = Vector2( 299, 278.288 )
texture = ExtResource( 38 )

[node name="4" type="Sprite" parent="Card/hidden_leaders"]
position = Vector2( 395, 278.288 )
texture = ExtResource( 38 )

[node name="5" type="Sprite" parent="Card/hidden_leaders"]
position = Vector2( 107, 342.288 )
texture = ExtResource( 38 )

[node name="6" type="Sprite" parent="Card/hidden_leaders"]
position = Vector2( 203, 342.288 )
texture = ExtResource( 38 )

[node name="7" type="Sprite" parent="Card/hidden_leaders"]
position = Vector2( 299, 342.288 )
texture = ExtResource( 38 )

[node name="8" type="Sprite" parent="Card/hidden_leaders"]
position = Vector2( 395, 342.288 )
texture = ExtResource( 38 )

[node name="Text" type="Node2D" parent="Card"]

[node name="IDNo" type="RichTextLabel" parent="Card/Text"]
margin_left = 32.0
margin_top = 48.0
margin_right = 224.0
margin_bottom = 78.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0.239216, 0.239216, 0.239216, 1 )
bbcode_enabled = true
bbcode_text = "IDNo.00000"
text = "IDNo.00000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="Card/Text"]
margin_left = 272.0
margin_top = 48.0
margin_right = 464.0
margin_bottom = 78.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0.239216, 0.239216, 0.239216, 1 )
bbcode_enabled = true
bbcode_text = "NAME:"
text = "NAME:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Node2D" parent="Card/Text"]

[node name="number" type="RichTextLabel" parent="Card/Text/Money"]
margin_left = 144.0
margin_top = 96.0
margin_right = 304.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.239216, 0.239216, 0.239216, 1 )
bbcode_enabled = true
bbcode_text = "[right]$3000[/right]"
text = "$3000"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="RichTextLabel" parent="Card/Text/Money"]
margin_left = 32.0
margin_top = 96.0
margin_right = 112.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.239216, 0.239216, 0.239216, 1 )
bbcode_enabled = true
bbcode_text = "MONEY:"
text = "MONEY:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pokedex" type="Node2D" parent="Card/Text"]
position = Vector2( 0, 48 )

[node name="number" type="RichTextLabel" parent="Card/Text/Pokedex"]
margin_left = 144.0
margin_top = 96.0
margin_right = 304.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.239216, 0.239216, 0.239216, 1 )
bbcode_enabled = true
bbcode_text = "[right]0[/right]"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="RichTextLabel" parent="Card/Text/Pokedex"]
margin_left = 32.0
margin_top = 96.0
margin_right = 128.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.239216, 0.239216, 0.239216, 1 )
bbcode_enabled = true
bbcode_text = "POKéDEX:"
text = "POKéDEX:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Node2D" parent="Card/Text"]
position = Vector2( 0, 112 )

[node name="number" type="RichTextLabel" parent="Card/Text/Time"]
margin_left = 144.0
margin_top = 96.0
margin_right = 304.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.239216, 0.239216, 0.239216, 1 )
bbcode_enabled = true
bbcode_text = "[right]00:00[/right]"
text = "00:00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="RichTextLabel" parent="Card/Text/Time"]
margin_left = 32.0
margin_top = 96.0
margin_right = 128.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.239216, 0.239216, 0.239216, 1 )
bbcode_enabled = true
bbcode_text = "TIME:"
text = "TIME:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="Node2D" parent="."]
visible = false

[node name="optionbg" type="Sprite" parent="OptionsMenu"]
texture = ExtResource( 39 )
centered = false

[node name="optionbg2" type="Sprite" parent="OptionsMenu"]
texture = ExtResource( 42 )
centered = false

[node name="fakebox" type="Sprite" parent="OptionsMenu"]
position = Vector2( 1, 288 )
texture = ExtResource( 40 )
centered = false

[node name="shadow" type="RichTextLabel" parent="OptionsMenu"]
margin_left = 50.0
margin_top = 19.0
margin_right = 162.0
margin_bottom = 44.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.239216, 0.239216, 0.239216, 1 )
bbcode_enabled = true
bbcode_text = "OPTIONS"
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="OptionsMenu"]
margin_left = 48.0
margin_top = 17.0
margin_right = 160.0
margin_bottom = 42.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "OPTIONS"
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="Node2D" parent="OptionsMenu"]

[node name="bars" type="Sprite" parent="OptionsMenu/MusicVolume"]
position = Vector2( 4, 50 )
texture = ExtResource( 41 )
centered = false
vframes = 2
frame = 1

[node name="shadow" type="RichTextLabel" parent="OptionsMenu/MusicVolume"]
margin_left = 18.0
margin_top = 58.0
margin_right = 210.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.419608, 0.611765, 0.713726, 1 )
bbcode_enabled = true
bbcode_text = "Music Volume"
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="RichTextLabel" parent="OptionsMenu/MusicVolume"]
margin_left = 16.0
margin_top = 56.0
margin_right = 208.0
margin_bottom = 88.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Music Volume"
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shadow_int" type="RichTextLabel" parent="OptionsMenu/MusicVolume"]
margin_left = 413.0
margin_top = 62.0
margin_right = 468.0
margin_bottom = 88.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0.419608, 0.611765, 0.713726, 1 )
bbcode_enabled = true
bbcode_text = "[right]100"
text = "100"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="int" type="RichTextLabel" parent="OptionsMenu/MusicVolume"]
margin_left = 407.0
margin_top = 60.0
margin_right = 466.0
margin_bottom = 87.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[right]100"
text = "100"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SEVolume" type="Node2D" parent="OptionsMenu"]
position = Vector2( 0, 48 )

[node name="bars" type="Sprite" parent="OptionsMenu/SEVolume"]
position = Vector2( 4, 50 )
texture = ExtResource( 41 )
centered = false
vframes = 2

[node name="shadow" type="RichTextLabel" parent="OptionsMenu/SEVolume"]
margin_left = 18.0
margin_top = 58.0
margin_right = 210.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.192157, 0.517647, 0.580392, 1 )
bbcode_enabled = true
bbcode_text = "SE Volume"
text = "SE Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="RichTextLabel" parent="OptionsMenu/SEVolume"]
margin_left = 16.0
margin_top = 56.0
margin_right = 208.0
margin_bottom = 88.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.258824, 0.870588, 0.905882, 1 )
bbcode_enabled = true
bbcode_text = "SE Volume"
text = "SE Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shadow_int" type="RichTextLabel" parent="OptionsMenu/SEVolume"]
margin_left = 413.0
margin_top = 62.0
margin_right = 468.0
margin_bottom = 88.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0.192157, 0.517647, 0.580392, 1 )
bbcode_enabled = true
bbcode_text = "[right]100"
text = "100"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="int" type="RichTextLabel" parent="OptionsMenu/SEVolume"]
margin_left = 407.0
margin_top = 60.0
margin_right = 466.0
margin_bottom = 87.0
custom_fonts/normal_font = SubResource( 8 )
custom_colors/default_color = Color( 0.258824, 0.870588, 0.905882, 1 )
bbcode_enabled = true
bbcode_text = "[right]100"
text = "100"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Node2D" parent="OptionsMenu"]
position = Vector2( 0, 96 )

[node name="bars" type="Sprite" parent="OptionsMenu/FPS"]
position = Vector2( 4, 50 )
texture = ExtResource( 41 )
centered = false
vframes = 2

[node name="shadow" type="RichTextLabel" parent="OptionsMenu/FPS"]
margin_left = 18.0
margin_top = 58.0
margin_right = 210.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.192157, 0.517647, 0.580392, 1 )
bbcode_enabled = true
bbcode_text = "FPS"
text = "FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="RichTextLabel" parent="OptionsMenu/FPS"]
margin_left = 16.0
margin_top = 56.0
margin_right = 208.0
margin_bottom = 88.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.258824, 0.870588, 0.905882, 1 )
bbcode_enabled = true
bbcode_text = "FPS"
text = "FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shadow_int" type="RichTextLabel" parent="OptionsMenu/FPS"]
margin_left = 413.0
margin_top = 62.0
margin_right = 468.0
margin_bottom = 88.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0.192157, 0.517647, 0.580392, 1 )
bbcode_enabled = true
bbcode_text = "[right]60"
text = "60"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="int" type="RichTextLabel" parent="OptionsMenu/FPS"]
margin_left = 407.0
margin_top = 60.0
margin_right = 466.0
margin_bottom = 87.0
custom_fonts/normal_font = SubResource( 8 )
custom_colors/default_color = Color( 0.258824, 0.870588, 0.905882, 1 )
bbcode_enabled = true
bbcode_text = "[right]60"
text = "60"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextSpeed" type="Node2D" parent="OptionsMenu"]
position = Vector2( 0, 144 )

[node name="bars" type="Sprite" parent="OptionsMenu/TextSpeed"]
position = Vector2( 4, 50 )
texture = ExtResource( 41 )
centered = false
vframes = 2

[node name="shadow" type="RichTextLabel" parent="OptionsMenu/TextSpeed"]
margin_left = 18.0
margin_top = 58.0
margin_right = 210.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.192157, 0.517647, 0.580392, 1 )
bbcode_enabled = true
bbcode_text = "Text Speed"
text = "Text Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="RichTextLabel" parent="OptionsMenu/TextSpeed"]
margin_left = 16.0
margin_top = 56.0
margin_right = 208.0
margin_bottom = 88.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.258824, 0.870588, 0.905882, 1 )
bbcode_enabled = true
bbcode_text = "Text Speed"
text = "Text Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontStyle" type="Node2D" parent="OptionsMenu"]
position = Vector2( 0, 192 )

[node name="bars" type="Sprite" parent="OptionsMenu/FontStyle"]
position = Vector2( 4, 50 )
texture = ExtResource( 41 )
centered = false
vframes = 2

[node name="shadow" type="RichTextLabel" parent="OptionsMenu/FontStyle"]
margin_left = 18.0
margin_top = 58.0
margin_right = 210.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.192157, 0.517647, 0.580392, 1 )
bbcode_enabled = true
bbcode_text = "Font Style"
text = "Font Style"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="RichTextLabel" parent="OptionsMenu/FontStyle"]
margin_left = 16.0
margin_top = 56.0
margin_right = 208.0
margin_bottom = 88.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.258824, 0.870588, 0.905882, 1 )
bbcode_enabled = true
bbcode_text = "Font Style"
text = "Font Style"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Open Menu" = SubResource( 9 )

[node name="Sounds" type="Node" parent="."]

[node name="Move" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 18 )
volume_db = -6.0

[node name="OpenMenu" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 19 )
volume_db = -6.0

[node name="Save" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 21 )

[node name="Transition" parent="." instance=ExtResource( 34 )]
